--- a/Latex/src/master.bib
+++ b/Latex/src/master.bib
@@ -433,3 +433,12 @@ title = {Gradient-Based Learning Algorithms for Recurrent Networks and Their Com
     doi = "10.3115/v1/D14-1179",
     pages = "1724--1734",
 }
+
+@article{Kingma2014,
+author = {Kingma, Diederik and Ba, Jimmy},
+year = {2014},
+month = {12},
+pages = {},
+title = {Adam: A Method for Stochastic Optimization},
+journal = {International Conference on Learning Representations}
+}
