Deleted faulty previous results.

--- a/Latex/src/3_ExperimentSetup.tex
+++ b/Latex/src/3_ExperimentSetup.tex
@@ -3,7 +3,7 @@
 \subsection{Models}\label{models}
 For the following experiments, the three RNN architectures described in Section \ref{neuralNetworkArchitectures} have been used. All models consist of a single layer of size $n = \lbrace 2^{1}, 2^{2}, \dots, 2^{n} \rbrace$, followed by a dense layer of size 5 with softmax activation. Each neuron in the dense layer corresponds to one character in the training data - \texttt{\{}, \texttt{[}, \texttt{]}, \texttt{\}} and \$ as an end-of-word marker. As such, the activations of the dense layer serve as interpretable output.
 
-All models were trained with the same parameters. The training data was received one character at a time, in batches of $512$. The loss was computed by categorical cross-entropy. Furthermore, the Adam optimizer (\cite{Kingma2014}) was applied with a learning rate of $0.0001$. The models were trained for $50$ epochs each. From those $50$ epochs, the model with the lowest loss was chosen to perform on the test data.\footnote{The models were implemented in Tensorflow 2.0. The source code can be found at URL HERE} %TODO
+All models were trained with the same parameters. The training data was received one character at a time, in batches of $512$. The loss was computed by categorical cross-entropy. Furthermore, the Adam optimizer (\cite{Kingma2014}) was applied with a learning rate of $0.0001$. The models were trained for $50$ epochs each. From those $50$ epochs, the model with the lowest loss was chosen to perform on the test data.\footnote{The models were implemented in Tensorflow 2.0. The source code can be found at https://github.com/FyDob/BA-Thesis}
 
 The models were trained on the same training data for both experiments. To answer the question of training data influence on model performance, three distinct sets of training data were used, yielding a total of $9 \times 3 \times 3 = 81$ evaluated models.
 
