Fixed minor typo in comment.

--- a/Latex/src/2_RelatedWork.tex
+++ b/Latex/src/2_RelatedWork.tex
@@ -243,7 +243,7 @@ An overview of investigated Dyck languages, corpus sizes and reported measures o
 	\label{tab:LiteratureInvestigatedModels}
 \end{table} 
 
-%can be put into appendix with [p] option
+% Can be put into appendix with [p] option
 \begin{table}
 	\begin{tabularx}{\textwidth}{@{}l*{10}{C}c@{}}
 	\toprule 
